RESOLVED FIXED212340
[WPE][WKTR] Fix typo in EventSenderProxyWPE
https://bugs.webkit.org/show_bug.cgi?id=212340
Summary [WPE][WKTR] Fix typo in EventSenderProxyWPE
Adrian Perez
Reported 2020-05-25 00:15:20 PDT
s/rightArror/rightArrow
Attachments
Patch (3.08 KB, patch)
2020-05-25 02:24 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2020-05-25 02:24:00 PDT
Created attachment 400188 [details] Patch This probably makes a few other editing and/or event layout tests pass, but many of thoise tests (e.g. all of “editing/”) are being skipped for WPE and I do not have time right now to go over them. We take care of them later on.
EWS
Comment 2 2020-05-25 03:10:37 PDT
Committed r262119: <https://trac.webkit.org/changeset/262119> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400188 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-25 03:11:14 PDT
Note You need to log in before you can comment on or make changes to this bug.