[WPE][WKTR] Fix typo in EventSenderProxyWPE https://bugs.webkit.org/show_bug.cgi?id=212340

Reviewed by Carlos Garcia Campos.

Tools:

* WebKitTestRunner/wpe/EventSenderProxyWPE.cpp:
(WTR::wpeKeySymForKeyRef): Fix typo rightArror -> rightArrow.

LayoutTests:

* platform/wpe/TestExpectations: fast/events/keydown-numpad-keys.html is now passing.


Canonical link: https://commits.webkit.org/225182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262119 268f45cc-cd09-0410-ab3c-d52691b4dbfc